public/css/styles.css
@media screen and (max-width:850px){
  .nav navbar-nav{
    position:absolute;
    right:0;
  }
  .navbar-brand {
    position:absolute;
    left:0;
    margin-left:15px;
  }
  .wrapper {
    max-width:100%;
    margin-right:15px;
    padding:0;
  }
}
@media screen and (max-width:350px){
  .navbar-brand {
    max-width:100%;
    left:0;
    margin-left:5px;
    margin-bottom:15px;
    padding-left:0;
  }
}

body {
  padding-top: 50px;
  font-family: 'Roboto Condensed', sans-serif;
}

body .navbar-brand {
  padding: 15px 0px;
}

body h1 {
  font-family: 'Montserrat', sans-serif;
  margin-bottom: 20px;
}

body .alert {
  margin-top: 20px;
}
div .text-center {
    max-width:100%;
}

.navbar {
    margin:0px;
    box-shadow:0px 2px 2px 0px rgba(0, 0, 0, 0.1), 0px 1px 0px 0px rgba(0, 0, 0, 0.1);
}

.panel-default > .panel-heading{
    font-family: 'Montserrat';
    font-weight: 400;
    background-color:transparent;
    border:0;
}

.wrapper {
  width: 860px;
  margin: 0 auto;
  padding-left: 40px;
  padding-right: 40px;
}

/*
.list-group-item {
    font-weight:bold;
    margin-bottom:5px;
    border:0;
}
*/

/*
.badge {
    color:#000;
    background-color:#FFF;
    border-radius:0;
}*/

.badge.badge-green {
  background-color: #AED1A9;
}

.add-review {
    width:100%;
}

.jumbotron {
    padding-top: 10px;
    padding-bottom: 10px;
    margin-bottom: 40px;
    color: #2A363B;
    background: transparent;
    border-radius: 7px;
    margin: 40px;
    /*box-shadow:0px 2px 2px 0px rgba(0, 0, 0, 0.1), 0px 1px 0px 0px rgba(0, 0, 0, 0.1);*/
}

.spin {
  position: fixed;
  z-index: 999;
  height: 0px;
  width: 0px;
  overflow: show;
  margin: auto;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.form-control.categories-search {
  font-size: 18px;
  margin-bottom: 40px;
  display: block;
}

.category-name {
  font-size: 24px;
  margin-top: 5px;
  margin-bottom: 5px;
}

.halves {
  margin-right: -20px;
}

.grid-cell {
  width: 50%;
  float: left;
  padding-right: 20px;
}

.panel-body {
  overflow: hidden;
}

.overflow-wrapper {
  max-width: 100%;
  display: inline-block;
  overflow: hidden;
  text-overflow: ellipsis;
  vertical-align: top;
  white-space: nowrap;
}

.auth-form {
  width: 400px;
  margin: 60px auto;
}

#categories {
  text-align:center;

}

#positive-input, #negative-input{
    background-color:#2A363B;
    color:#fff;
    border-radius:0;
    width: 100%;
    text-align: center;
    font-size:1.5em;
    cursor: pointer;
    font-weight:200;
}

#positive-input:focus, #negative-input:focus{
    border-color: rgba(255, 255, 255, 3);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 10px rgba(42, 54, 59, 3);
    outline: 0 none;
    background-color:#fff;
    color:#2A363B;
    font-weight:100;
    cursor: text;
}

ul.thumbnails.image_picker_selector li .thumbnail.selected {
  background: rgba(42, 54, 59, 3);
}
#image_picker_image{
    border-color: rgba(42, 54, 59, 3);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 10px rgba(42, 54, 59, 3);
    outline: 0 none;
}

.media-wrapper {
    margin: auto;
    text-align: center;
    position: relative;
    -webkit-border-radius: 5px;
    -moz-border-radius: 5px;
    border-radius: 5px;
    margin-bottom: 20px !important;
    width: 100%;
    padding-top: 5px;
}

.scrolls {
    overflow-x: scroll;
    overflow-y: hidden;
    height: 255px;
    white-space:nowrap
}

.imageDiv img {
    margin: 2px;
    max-height: 150px;
    cursor: pointer;
    display:inline-block;
    *display:inline;
    *zoom:1;
    vertical-align:top;
}

.product-media{
    position:relative;
    display:inline-block;
    padding-bottom:30px;
}

.product-caption{
    background:rgba(153,184,152, .75);
    color:#2A363B;
    font-family: 'Roboto Condensed', sans-serif;
    font-size:1em;
    width:100%;
    font-weight:600;
    position:absolute;
    top: 0;
    padding:1ex;
}

.product-tile img{
    max-width: 100%;
}

#prodCat {
    text-align: center;
}

.row {
    max-width:100%
}

.lead {
    font-size: 16px;
}

#catSearch {
    margin-bottom:10px;

}

#jumbSearch{
    padding:8px 15px;
    background:white;
    border:0px solid #dbdbdb;
}

#jumbSearch:focus {
    width: 100%;
}

}
#jumbSearch:hover {
    background-color:#fafafa;
    color:#207cca;
}

.input-group-btn{
    position:relative;
}

a {
    color:#E28FA3;
}

a:hover {
    color:#2A363B;
}
div.col-xs-6 col-md-3 a{
    margin:10px;
}

.categories-hyper {
    margin:10px;
}

h4 {
    margin:10px;
}

#youtube-info {
    width:100%;
}

#youtube-title, #youtube-body{
    white-space: nowrap;
    overflow: hidden;
}

.selectize-control.single .selectize-input.input-active, .selectize-control.single .selectize-input.input-active input {
    border-color: rgba(255, 255, 255, 3);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 10px rgba(42, 54, 59, .5);
    outline: 0 none;
}

.selectize-input.focus {
    border-color: #2A363B;
    outline: 0px none;
    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.075) inset, 0px 0px 8px rgba(42, 54, 59, 0.6);
}

.selectize-dropdown, .selectize-input, .selectize-input input{
    font-family: 'Roboto Condensed', sans-serif;
}

textarea:focus, input[type="text"]:focus, input[type="password"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="date"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus, input[type="number"]:focus, input[type="email"]:focus, input[type="url"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="color"]:focus, .uneditable-input:focus {   
    border-color: rgba(255, 255, 255, 3);
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 10px rgba(42, 54, 59, 3);
    outline: 0 none;
}

.breadcrumb{
    background-color:#2A363B;
    border-radius:0;
}

.breadcrumb > li + li:before {
    padding: 0px 5px;
    content: "›";
    color: #FFF;
}

.breadcrumb > .active {
    color: #FFF;
}

.breadcrumb a:hover{
    color: #FFF;
}

.navbar {
    margin: 0px;
    box-shadow: none;
}

.panel-simple{
    border-top:15px solid #8EA58C;
    border-right:15px solid #8EA58C;
    border-left: 15px solid #99B898;
    border-bottom: 15px solid #99B898;
    border-radius:0;
}

.panel-footer{
   background-color: #99B898;
   padding:0;
   border:0;
   border-radius:0;
}

.panel-footer-count{
    font-weight:100;
    padding:1.5ex;
    color:#fff;
}

.panel-imgs{
    max-width:240px;
    max-height:40px;
    overflow:hidden;
    border-radius:0; 
}

.panel-img{
    height:40px;
    width:40px;
    margin-right:-4px;
    border-radius:0; 
}

